# Vending-Machine-Tracking-Application

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_vendingmachine_status.py  0003_rename_status_vendingmachine_is_active.py  0004_product_stock.py  0005_product_cost_alter_product_name_alter_stock_quantity_and_more.py  0006_alter_product_id_alter_stock_id_and_more.py  0007_stocktimeline.py  0008_rename_quantity_change_stocktimeline_quantity.py
api/models/: product.py  stock.py  stock_timeline.py  vending_machine.py
api/serializers/: product_serializer.py  stock_serializer.py  stock_timeline_serializer.py  vending_machine_serializer.py
api/tests/: __init__.py  utils.py
api/tests/views/: test_product_view.py  test_product_view_set.py  test_stock_view.py  test_stock_view_set.py  test_vending_machine_view.py  test_vending_machine_view_set.py
api/views/: product_view.py  product_view_set.py  stock_timeline_view.py  stock_view.py  stock_view_set.py  vending_machine_view.py  vending_machine_view_set.py
vending_machine_tracking_application/: asgi.py  settings.py  urls.py  wsgi.py
